parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSANDLESS
    CIRCUMFLEX
    CIRCUMFLEXLESS
    ERROR
    NEWLINE
    PRINT

Grammar

Rule 0     S' -> Program
Rule 1     Program -> DefinitionList
Rule 2     DefinitionList -> DefinitionList Definition
Rule 3     DefinitionList -> empty
Rule 4     Definition -> ClassDefinition
Rule 5     Definition -> FunctionDefinition
Rule 6     ClassDefinition -> CLASS ID OptClassBase OPENBRACE MemberList CLOSEBRACE
Rule 7     FunctionDefinition -> DEF OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT Block
Rule 8     OptClassBase -> COLON ID
Rule 9     OptClassBase -> empty
Rule 10    MemberList -> MemberList MemberDefinition
Rule 11    MemberList -> empty
Rule 12    MemberDefinition -> OptModifier VAR VariableList SEMICOLON
Rule 13    MemberDefinition -> OptModifier DEF ID OPENPARENT OptFormArgsList CLOSEPARENT SEMICOLON
Rule 14    OptModifier -> STATIC
Rule 15    OptModifier -> empty
Rule 16    VariableList -> VariableList COMMA Variable
Rule 17    VariableList -> Variable
Rule 18    Variable -> ID
Rule 19    Variable -> ID OPENSQUAREBRACKET NUMBER CLOSESQUAREBRACKET
Rule 20    OptFormArgsList -> FormArgsList
Rule 21    OptFormArgsList -> empty
Rule 22    OptArgsList -> OptArgsList COMMA ID
Rule 23    OptArgsList -> ID
Rule 24    OptEnvClass -> ID COLONCOLON
Rule 25    OptEnvClass -> empty
Rule 26    OptParamList -> OptFormArgsList OptTempList
Rule 27    OptTempList -> SEMICOLON FormArgsList
Rule 28    OptTempList -> empty
Rule 29    FormArgsList -> FormArgsList COMMA ID
Rule 30    FormArgsList -> ID
Rule 31    Block -> OPENBRACE CommandList CLOSEBRACE
Rule 32    CommandList -> CommandList Command
Rule 33    CommandList -> empty
Rule 34    Command -> IF OPENPARENT OptExp CLOSEPARENT Command ELSE Command
Rule 35    Command -> IF OPENPARENT OptExp CLOSEPARENT Command
Rule 36    Command -> WHILE OPENPARENT OptExp CLOSEPARENT Command
Rule 37    Command -> DO Command WHILE OPENPARENT OptExp CLOSEPARENT SEMICOLON
Rule 38    Command -> FOR OPENPARENT OptExp SEMICOLON OptExp SEMICOLON OptExp CLOSEPARENT Command
Rule 39    Command -> FOREACH ID IN ID Command
Rule 40    Command -> BREAK SEMICOLON
Rule 41    Command -> CONTINUE SEMICOLON
Rule 42    Command -> RETURN OptExp SEMICOLON
Rule 43    Command -> OptExp SEMICOLON
Rule 44    Command -> Block
Rule 45    OptExp -> Exp
Rule 46    OptExp -> empty
Rule 47    Exp -> Exp COMMA Exp
Rule 48    Exp -> LeftVal ATRIB Exp
Rule 49    Exp -> LeftVal PLUSEQUALS Exp
Rule 50    Exp -> LeftVal MINUSEQUALS Exp
Rule 51    Exp -> LeftVal TIMESEQUALS Exp
Rule 52    Exp -> LeftVal DIVEQUALS Exp
Rule 53    Exp -> Exp TERNARYIF Exp COLON Exp
Rule 54    Exp -> Exp OR Exp
Rule 55    Exp -> Exp AND Exp
Rule 56    Exp -> Exp BINARYOR Exp
Rule 57    Exp -> Exp BINARYAND Exp
Rule 58    Exp -> Exp LESSLESS Exp
Rule 59    Exp -> Exp GREATERGREATER Exp
Rule 60    Exp -> Exp EQUALS Exp
Rule 61    Exp -> Exp NOTEQUALS Exp
Rule 62    Exp -> Exp GREATEREQUALS Exp
Rule 63    Exp -> Exp LESSEQUALS Exp
Rule 64    Exp -> Exp GREATER Exp
Rule 65    Exp -> Exp LESS Exp
Rule 66    Exp -> Exp PLUS Exp
Rule 67    Exp -> Exp MINUS Exp
Rule 68    Exp -> Exp TIMES Exp
Rule 69    Exp -> Exp DIV Exp
Rule 70    Exp -> Exp MOD Exp
Rule 71    Exp -> MINUSMINUS LeftVal
Rule 72    Exp -> PLUSPLUS LeftVal
Rule 73    Exp -> LeftVal MINUSMINUS
Rule 74    Exp -> LeftVal PLUSPLUS
Rule 75    Exp -> NOT Exp
Rule 76    Exp -> TILDE Exp
Rule 77    Exp -> NEW ID OPENPARENT OptArgs CLOSEPARENT
Rule 78    Exp -> ID OPENPARENT OptArgs CLOSEPARENT
Rule 79    Exp -> Exp ARROW ID OPENPARENT OptArgs CLOSEPARENT
Rule 80    Exp -> ID
Rule 81    Exp -> ID OPENSQUAREBRACKET Exp CLOSESQUAREBRACKET
Rule 82    Exp -> NUMBER
Rule 83    Exp -> STRING
Rule 84    Exp -> NIL
Rule 85    OptArgs -> Args
Rule 86    OptArgs -> empty
Rule 87    Args -> Args COMMA Exp
Rule 88    Args -> Exp
Rule 89    LeftVal -> ID
Rule 90    LeftVal -> ID OPENSQUAREBRACKET Exp CLOSESQUAREBRACKET
Rule 91    empty -> <empty>

Terminals, with rules where they appear

AMPERSANDLESS        : 
AND                  : 55
ARROW                : 79
ATRIB                : 48
BINARYAND            : 57
BINARYOR             : 56
BREAK                : 40
CIRCUMFLEX           : 
CIRCUMFLEXLESS       : 
CLASS                : 6
CLOSEBRACE           : 6 31
CLOSEPARENT          : 7 13 34 35 36 37 38 77 78 79
CLOSESQUAREBRACKET   : 19 81 90
COLON                : 8 53
COLONCOLON           : 24
COMMA                : 16 22 29 47 87
CONTINUE             : 41
DEF                  : 7 13
DIV                  : 69
DIVEQUALS            : 52
DO                   : 37
ELSE                 : 34
EQUALS               : 60
ERROR                : 
FOR                  : 38
FOREACH              : 39
GREATER              : 64
GREATEREQUALS        : 62
GREATERGREATER       : 59
ID                   : 6 7 8 13 18 19 22 23 24 29 30 39 39 77 78 79 80 81 89 90
IF                   : 34 35
IN                   : 39
LESS                 : 65
LESSEQUALS           : 63
LESSLESS             : 58
MINUS                : 67
MINUSEQUALS          : 50
MINUSMINUS           : 71 73
MOD                  : 70
NEW                  : 77
NEWLINE              : 
NIL                  : 84
NOT                  : 75
NOTEQUALS            : 61
NUMBER               : 19 82
OPENBRACE            : 6 31
OPENPARENT           : 7 13 34 35 36 37 38 77 78 79
OPENSQUAREBRACKET    : 19 81 90
OR                   : 54
PLUS                 : 66
PLUSEQUALS           : 49
PLUSPLUS             : 72 74
PRINT                : 
RETURN               : 42
SEMICOLON            : 12 13 27 37 38 38 40 41 42 43
STATIC               : 14
STRING               : 83
TERNARYIF            : 53
TILDE                : 76
TIMES                : 68
TIMESEQUALS          : 51
VAR                  : 12
WHILE                : 36 37
error                : 

Nonterminals, with rules where they appear

Args                 : 85 87
Block                : 7 44
ClassDefinition      : 4
Command              : 32 34 34 35 36 37 38 39
CommandList          : 31 32
Definition           : 2
DefinitionList       : 1 2
Exp                  : 45 47 47 48 49 50 51 52 53 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 75 76 79 81 87 88 90
FormArgsList         : 20 27 29
FunctionDefinition   : 5
LeftVal              : 48 49 50 51 52 71 72 73 74
MemberDefinition     : 10
MemberList           : 6 10
OptArgs              : 77 78 79
OptArgsList          : 22
OptClassBase         : 6
OptEnvClass          : 7
OptExp               : 34 35 36 37 38 38 38 42 43
OptFormArgsList      : 13 26
OptModifier          : 12 13
OptParamList         : 7
OptTempList          : 26
Program              : 0
Variable             : 16 17
VariableList         : 12 16
empty                : 3 9 11 15 21 25 28 33 46 86

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . DefinitionList
    (2) DefinitionList -> . DefinitionList Definition
    (3) DefinitionList -> . empty
    (91) empty -> .

    CLASS           reduce using rule 91 (empty -> .)
    DEF             reduce using rule 91 (empty -> .)
    $end            reduce using rule 91 (empty -> .)

    Program                        shift and go to state 1
    DefinitionList                 shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> Program .



state 2

    (1) Program -> DefinitionList .
    (2) DefinitionList -> DefinitionList . Definition
    (4) Definition -> . ClassDefinition
    (5) Definition -> . FunctionDefinition
    (6) ClassDefinition -> . CLASS ID OptClassBase OPENBRACE MemberList CLOSEBRACE
    (7) FunctionDefinition -> . DEF OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT Block

    $end            reduce using rule 1 (Program -> DefinitionList .)
    CLASS           shift and go to state 7
    DEF             shift and go to state 8

    Definition                     shift and go to state 4
    ClassDefinition                shift and go to state 5
    FunctionDefinition             shift and go to state 6

state 3

    (3) DefinitionList -> empty .

    CLASS           reduce using rule 3 (DefinitionList -> empty .)
    DEF             reduce using rule 3 (DefinitionList -> empty .)
    $end            reduce using rule 3 (DefinitionList -> empty .)


state 4

    (2) DefinitionList -> DefinitionList Definition .

    CLASS           reduce using rule 2 (DefinitionList -> DefinitionList Definition .)
    DEF             reduce using rule 2 (DefinitionList -> DefinitionList Definition .)
    $end            reduce using rule 2 (DefinitionList -> DefinitionList Definition .)


state 5

    (4) Definition -> ClassDefinition .

    CLASS           reduce using rule 4 (Definition -> ClassDefinition .)
    DEF             reduce using rule 4 (Definition -> ClassDefinition .)
    $end            reduce using rule 4 (Definition -> ClassDefinition .)


state 6

    (5) Definition -> FunctionDefinition .

    CLASS           reduce using rule 5 (Definition -> FunctionDefinition .)
    DEF             reduce using rule 5 (Definition -> FunctionDefinition .)
    $end            reduce using rule 5 (Definition -> FunctionDefinition .)


state 7

    (6) ClassDefinition -> CLASS . ID OptClassBase OPENBRACE MemberList CLOSEBRACE

    ID              shift and go to state 9


state 8

    (7) FunctionDefinition -> DEF . OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT Block
    (24) OptEnvClass -> . ID COLONCOLON
    (25) OptEnvClass -> . empty
    (91) empty -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 11

  ! ID              [ reduce using rule 91 (empty -> .) ]

    OptEnvClass                    shift and go to state 10
    empty                          shift and go to state 12

state 9

    (6) ClassDefinition -> CLASS ID . OptClassBase OPENBRACE MemberList CLOSEBRACE
    (8) OptClassBase -> . COLON ID
    (9) OptClassBase -> . empty
    (91) empty -> .

    COLON           shift and go to state 14
    OPENBRACE       reduce using rule 91 (empty -> .)

    OptClassBase                   shift and go to state 13
    empty                          shift and go to state 15

state 10

    (7) FunctionDefinition -> DEF OptEnvClass . ID OPENPARENT OptParamList CLOSEPARENT Block

    ID              shift and go to state 16


state 11

    (24) OptEnvClass -> ID . COLONCOLON

    COLONCOLON      shift and go to state 17


state 12

    (25) OptEnvClass -> empty .

    ID              reduce using rule 25 (OptEnvClass -> empty .)


state 13

    (6) ClassDefinition -> CLASS ID OptClassBase . OPENBRACE MemberList CLOSEBRACE

    OPENBRACE       shift and go to state 18


state 14

    (8) OptClassBase -> COLON . ID

    ID              shift and go to state 19


state 15

    (9) OptClassBase -> empty .

    OPENBRACE       reduce using rule 9 (OptClassBase -> empty .)


state 16

    (7) FunctionDefinition -> DEF OptEnvClass ID . OPENPARENT OptParamList CLOSEPARENT Block

    OPENPARENT      shift and go to state 20


state 17

    (24) OptEnvClass -> ID COLONCOLON .

    ID              reduce using rule 24 (OptEnvClass -> ID COLONCOLON .)


state 18

    (6) ClassDefinition -> CLASS ID OptClassBase OPENBRACE . MemberList CLOSEBRACE
    (10) MemberList -> . MemberList MemberDefinition
    (11) MemberList -> . empty
    (91) empty -> .

    CLOSEBRACE      reduce using rule 91 (empty -> .)
    STATIC          reduce using rule 91 (empty -> .)
    VAR             reduce using rule 91 (empty -> .)
    DEF             reduce using rule 91 (empty -> .)

    MemberList                     shift and go to state 21
    empty                          shift and go to state 22

state 19

    (8) OptClassBase -> COLON ID .

    OPENBRACE       reduce using rule 8 (OptClassBase -> COLON ID .)


state 20

    (7) FunctionDefinition -> DEF OptEnvClass ID OPENPARENT . OptParamList CLOSEPARENT Block
    (26) OptParamList -> . OptFormArgsList OptTempList
    (20) OptFormArgsList -> . FormArgsList
    (21) OptFormArgsList -> . empty
    (29) FormArgsList -> . FormArgsList COMMA ID
    (30) FormArgsList -> . ID
    (91) empty -> .

    ID              shift and go to state 23
    SEMICOLON       reduce using rule 91 (empty -> .)
    CLOSEPARENT     reduce using rule 91 (empty -> .)

    OptParamList                   shift and go to state 24
    OptFormArgsList                shift and go to state 25
    FormArgsList                   shift and go to state 26
    empty                          shift and go to state 27

state 21

    (6) ClassDefinition -> CLASS ID OptClassBase OPENBRACE MemberList . CLOSEBRACE
    (10) MemberList -> MemberList . MemberDefinition
    (12) MemberDefinition -> . OptModifier VAR VariableList SEMICOLON
    (13) MemberDefinition -> . OptModifier DEF ID OPENPARENT OptFormArgsList CLOSEPARENT SEMICOLON
    (14) OptModifier -> . STATIC
    (15) OptModifier -> . empty
    (91) empty -> .

    CLOSEBRACE      shift and go to state 28
    STATIC          shift and go to state 31
    VAR             reduce using rule 91 (empty -> .)
    DEF             reduce using rule 91 (empty -> .)

    MemberDefinition               shift and go to state 29
    OptModifier                    shift and go to state 30
    empty                          shift and go to state 32

state 22

    (11) MemberList -> empty .

    CLOSEBRACE      reduce using rule 11 (MemberList -> empty .)
    STATIC          reduce using rule 11 (MemberList -> empty .)
    VAR             reduce using rule 11 (MemberList -> empty .)
    DEF             reduce using rule 11 (MemberList -> empty .)


state 23

    (30) FormArgsList -> ID .

    COMMA           reduce using rule 30 (FormArgsList -> ID .)
    SEMICOLON       reduce using rule 30 (FormArgsList -> ID .)
    CLOSEPARENT     reduce using rule 30 (FormArgsList -> ID .)


state 24

    (7) FunctionDefinition -> DEF OptEnvClass ID OPENPARENT OptParamList . CLOSEPARENT Block

    CLOSEPARENT     shift and go to state 33


state 25

    (26) OptParamList -> OptFormArgsList . OptTempList
    (27) OptTempList -> . SEMICOLON FormArgsList
    (28) OptTempList -> . empty
    (91) empty -> .

    SEMICOLON       shift and go to state 35
    CLOSEPARENT     reduce using rule 91 (empty -> .)

    OptTempList                    shift and go to state 34
    empty                          shift and go to state 36

state 26

    (20) OptFormArgsList -> FormArgsList .
    (29) FormArgsList -> FormArgsList . COMMA ID

    SEMICOLON       reduce using rule 20 (OptFormArgsList -> FormArgsList .)
    CLOSEPARENT     reduce using rule 20 (OptFormArgsList -> FormArgsList .)
    COMMA           shift and go to state 37


state 27

    (21) OptFormArgsList -> empty .

    SEMICOLON       reduce using rule 21 (OptFormArgsList -> empty .)
    CLOSEPARENT     reduce using rule 21 (OptFormArgsList -> empty .)


state 28

    (6) ClassDefinition -> CLASS ID OptClassBase OPENBRACE MemberList CLOSEBRACE .

    CLASS           reduce using rule 6 (ClassDefinition -> CLASS ID OptClassBase OPENBRACE MemberList CLOSEBRACE .)
    DEF             reduce using rule 6 (ClassDefinition -> CLASS ID OptClassBase OPENBRACE MemberList CLOSEBRACE .)
    $end            reduce using rule 6 (ClassDefinition -> CLASS ID OptClassBase OPENBRACE MemberList CLOSEBRACE .)


state 29

    (10) MemberList -> MemberList MemberDefinition .

    CLOSEBRACE      reduce using rule 10 (MemberList -> MemberList MemberDefinition .)
    STATIC          reduce using rule 10 (MemberList -> MemberList MemberDefinition .)
    VAR             reduce using rule 10 (MemberList -> MemberList MemberDefinition .)
    DEF             reduce using rule 10 (MemberList -> MemberList MemberDefinition .)


state 30

    (12) MemberDefinition -> OptModifier . VAR VariableList SEMICOLON
    (13) MemberDefinition -> OptModifier . DEF ID OPENPARENT OptFormArgsList CLOSEPARENT SEMICOLON

    VAR             shift and go to state 38
    DEF             shift and go to state 39


state 31

    (14) OptModifier -> STATIC .

    VAR             reduce using rule 14 (OptModifier -> STATIC .)
    DEF             reduce using rule 14 (OptModifier -> STATIC .)


state 32

    (15) OptModifier -> empty .

    VAR             reduce using rule 15 (OptModifier -> empty .)
    DEF             reduce using rule 15 (OptModifier -> empty .)


state 33

    (7) FunctionDefinition -> DEF OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT . Block
    (31) Block -> . OPENBRACE CommandList CLOSEBRACE

    OPENBRACE       shift and go to state 41

    Block                          shift and go to state 40

state 34

    (26) OptParamList -> OptFormArgsList OptTempList .

    CLOSEPARENT     reduce using rule 26 (OptParamList -> OptFormArgsList OptTempList .)


state 35

    (27) OptTempList -> SEMICOLON . FormArgsList
    (29) FormArgsList -> . FormArgsList COMMA ID
    (30) FormArgsList -> . ID

    ID              shift and go to state 23

    FormArgsList                   shift and go to state 42

state 36

    (28) OptTempList -> empty .

    CLOSEPARENT     reduce using rule 28 (OptTempList -> empty .)


state 37

    (29) FormArgsList -> FormArgsList COMMA . ID

    ID              shift and go to state 43


state 38

    (12) MemberDefinition -> OptModifier VAR . VariableList SEMICOLON
    (16) VariableList -> . VariableList COMMA Variable
    (17) VariableList -> . Variable
    (18) Variable -> . ID
    (19) Variable -> . ID OPENSQUAREBRACKET NUMBER CLOSESQUAREBRACKET

    ID              shift and go to state 46

    VariableList                   shift and go to state 44
    Variable                       shift and go to state 45

state 39

    (13) MemberDefinition -> OptModifier DEF . ID OPENPARENT OptFormArgsList CLOSEPARENT SEMICOLON

    ID              shift and go to state 47


state 40

    (7) FunctionDefinition -> DEF OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT Block .

    CLASS           reduce using rule 7 (FunctionDefinition -> DEF OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT Block .)
    DEF             reduce using rule 7 (FunctionDefinition -> DEF OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT Block .)
    $end            reduce using rule 7 (FunctionDefinition -> DEF OptEnvClass ID OPENPARENT OptParamList CLOSEPARENT Block .)


state 41

    (31) Block -> OPENBRACE . CommandList CLOSEBRACE
    (32) CommandList -> . CommandList Command
    (33) CommandList -> . empty
    (91) empty -> .

    CLOSEBRACE      reduce using rule 91 (empty -> .)
    IF              reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    DO              reduce using rule 91 (empty -> .)
    FOR             reduce using rule 91 (empty -> .)
    FOREACH         reduce using rule 91 (empty -> .)
    BREAK           reduce using rule 91 (empty -> .)
    CONTINUE        reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)
    OPENBRACE       reduce using rule 91 (empty -> .)
    MINUSMINUS      reduce using rule 91 (empty -> .)
    PLUSPLUS        reduce using rule 91 (empty -> .)
    NOT             reduce using rule 91 (empty -> .)
    TILDE           reduce using rule 91 (empty -> .)
    NEW             reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    NUMBER          reduce using rule 91 (empty -> .)
    STRING          reduce using rule 91 (empty -> .)
    NIL             reduce using rule 91 (empty -> .)
    SEMICOLON       reduce using rule 91 (empty -> .)

    CommandList                    shift and go to state 48
    empty                          shift and go to state 49

state 42

    (27) OptTempList -> SEMICOLON FormArgsList .
    (29) FormArgsList -> FormArgsList . COMMA ID

    CLOSEPARENT     reduce using rule 27 (OptTempList -> SEMICOLON FormArgsList .)
    COMMA           shift and go to state 37


state 43

    (29) FormArgsList -> FormArgsList COMMA ID .

    COMMA           reduce using rule 29 (FormArgsList -> FormArgsList COMMA ID .)
    SEMICOLON       reduce using rule 29 (FormArgsList -> FormArgsList COMMA ID .)
    CLOSEPARENT     reduce using rule 29 (FormArgsList -> FormArgsList COMMA ID .)


state 44

    (12) MemberDefinition -> OptModifier VAR VariableList . SEMICOLON
    (16) VariableList -> VariableList . COMMA Variable

    SEMICOLON       shift and go to state 50
    COMMA           shift and go to state 51


state 45

    (17) VariableList -> Variable .

    SEMICOLON       reduce using rule 17 (VariableList -> Variable .)
    COMMA           reduce using rule 17 (VariableList -> Variable .)


state 46

    (18) Variable -> ID .
    (19) Variable -> ID . OPENSQUAREBRACKET NUMBER CLOSESQUAREBRACKET

    SEMICOLON       reduce using rule 18 (Variable -> ID .)
    COMMA           reduce using rule 18 (Variable -> ID .)
    OPENSQUAREBRACKET shift and go to state 52


state 47

    (13) MemberDefinition -> OptModifier DEF ID . OPENPARENT OptFormArgsList CLOSEPARENT SEMICOLON

    OPENPARENT      shift and go to state 53


state 48

    (31) Block -> OPENBRACE CommandList . CLOSEBRACE
    (32) CommandList -> CommandList . Command
    (34) Command -> . IF OPENPARENT OptExp CLOSEPARENT Command ELSE Command
    (35) Command -> . IF OPENPARENT OptExp CLOSEPARENT Command
    (36) Command -> . WHILE OPENPARENT OptExp CLOSEPARENT Command
    (37) Command -> . DO Command WHILE OPENPARENT OptExp CLOSEPARENT SEMICOLON
    (38) Command -> . FOR OPENPARENT OptExp SEMICOLON OptExp SEMICOLON OptExp CLOSEPARENT Command
    (39) Command -> . FOREACH ID IN ID Command
    (40) Command -> . BREAK SEMICOLON
    (41) Command -> . CONTINUE SEMICOLON
    (42) Command -> . RETURN OptExp SEMICOLON
    (43) Command -> . OptExp SEMICOLON
    (44) Command -> . Block
    (45) OptExp -> . Exp
    (46) OptExp -> . empty
    (31) Block -> . OPENBRACE CommandList CLOSEBRACE
    (47) Exp -> . Exp COMMA Exp
    (48) Exp -> . LeftVal ATRIB Exp
    (49) Exp -> . LeftVal PLUSEQUALS Exp
    (50) Exp -> . LeftVal MINUSEQUALS Exp
    (51) Exp -> . LeftVal TIMESEQUALS Exp
    (52) Exp -> . LeftVal DIVEQUALS Exp
    (53) Exp -> . Exp TERNARYIF Exp COLON Exp
    (54) Exp -> . Exp OR Exp
    (55) Exp -> . Exp AND Exp
    (56) Exp -> . Exp BINARYOR Exp
    (57) Exp -> . Exp BINARYAND Exp
    (58) Exp -> . Exp LESSLESS Exp
    (59) Exp -> . Exp GREATERGREATER Exp
    (60) Exp -> . Exp EQUALS Exp
    (61) Exp -> . Exp NOTEQUALS Exp
    (62) Exp -> . Exp GREATEREQUALS Exp
    (63) Exp -> . Exp LESSEQUALS Exp
    (64) Exp -> . Exp GREATER Exp
    (65) Exp -> . Exp LESS Exp
    (66) Exp -> . Exp PLUS Exp
    (67) Exp -> . Exp MINUS Exp
    (68) Exp -> . Exp TIMES Exp
    (69) Exp -> . Exp DIV Exp
    (70) Exp -> . Exp MOD Exp
    (71) Exp -> . MINUSMINUS LeftVal
    (72) Exp -> . PLUSPLUS LeftVal
    (73) Exp -> . LeftVal MINUSMINUS
    (74) Exp -> . LeftVal PLUSPLUS
    (75) Exp -> . NOT Exp
    (76) Exp -> . TILDE Exp
    (77) Exp -> . NEW ID OPENPARENT OptArgs CLOSEPARENT
    (78) Exp -> . ID OPENPARENT OptArgs CLOSEPARENT
    (79) Exp -> . Exp ARROW ID OPENPARENT OptArgs CLOSEPARENT
    (80) Exp -> . ID
    (81) Exp -> . ID OPENSQUAREBRACKET Exp CLOSESQUAREBRACKET
    (82) Exp -> . NUMBER
    (83) Exp -> . STRING
    (84) Exp -> . NIL
    (91) empty -> .
    (89) LeftVal -> . ID
    (90) LeftVal -> . ID OPENSQUAREBRACKET Exp CLOSESQUAREBRACKET

    CLOSEBRACE      shift and go to state 54
    IF              shift and go to state 56
    WHILE           shift and go to state 58
    DO              shift and go to state 59
    FOR             shift and go to state 60
    FOREACH         shift and go to state 61
    BREAK           shift and go to state 63
    CONTINUE        shift and go to state 64
    RETURN          shift and go to state 65
    OPENBRACE       shift and go to state 41
    MINUSMINUS      shift and go to state 70
    PLUSPLUS        shift and go to state 71
    NOT             shift and go to state 72
    TILDE           shift and go to state 73
    NEW             shift and go to state 74
    ID              shift and go to state 62
    NUMBER          shift and go to state 75
    STRING          shift and go to state 76
    NIL             shift and go to state 77
    SEMICOLON       reduce using rule 91 (empty -> .)

    Command                        shift and go to state 55
    OptExp                         shift and go to state 57
    Block                          shift and go to state 66
    Exp                            shift and go to state 67
    empty                          shift and go to state 68
    LeftVal                        shift and go to state 69

state 49

    (33) CommandList -> empty .

    CLOSEBRACE      reduce using rule 33 (CommandList -> empty .)
    IF              reduce using rule 33 (CommandList -> empty .)
    WHILE           reduce using rule 33 (CommandList -> empty .)
    DO              reduce using rule 33 (CommandList -> empty .)
    FOR             reduce using rule 33 (CommandList -> empty .)
    FOREACH         reduce using rule 33 (CommandList -> empty .)
    BREAK           reduce using rule 33 (CommandList -> empty .)
    CONTINUE        reduce using rule 33 (CommandList -> empty .)
    RETURN          reduce using rule 33 (CommandList -> empty .)
    OPENBRACE       reduce using rule 33 (CommandList -> empty .)
    MINUSMINUS      reduce using rule 33 (CommandList -> empty .)
    PLUSPLUS        reduce using rule 33 (CommandList -> empty .)
    NOT             reduce using rule 33 (CommandList -> empty .)
    TILDE           reduce using rule 33 (CommandList -> empty .)
    NEW             reduce using rule 33 (CommandList -> empty .)
    ID              reduce using rule 33 (CommandList -> empty .)
    NUMBER          reduce using rule 33 (CommandList -> empty .)
    STRING          reduce using rule 33 (CommandList -> empty .)
    NIL             reduce using rule 33 (CommandList -> empty .)
    SEMICOLON       reduce using rule 33 (CommandList -> empty .)


state 50

    (12) MemberDefinition -> OptModifier VAR VariableList SEMICOLON .

    CLOSEBRACE      reduce using rule 12 (MemberDefinition -> OptModifier VAR VariableList SEMICOLON .)
    STATIC          reduce using rule 12 (MemberDefinition -> OptModifier VAR VariableList SEMICOLON .)
    VAR             reduce using rule 12 (MemberDefinition -> OptModifier VAR VariableList SEMICOLON .)
    DEF             reduce using rule 12 (MemberDefinition -> OptModifier VAR VariableList SEMICOLON .)


state 51

    (16) VariableList -> VariableList COMMA . Variable
    (18) Variable -> . ID
    (19) Variable -> . ID OPENSQUAREBRACKET NUMBER CLOSESQUAREBRACKET

    ID              shift and go to state 46

    Variable                       shift and go to state 78

state 52

    (19) Variable -> ID OPENSQUAREBRACKET . NUMBER CLOSESQUAREBRACKET

    NUMBER          shift and go to state 79


state 53

    (13) MemberDefinition -> OptModifier DEF ID OPENPARENT . OptFormArgsList CLOSEPARENT SEMICOLON
    (20) OptFormArgsList -> . FormArgsList
    (21) OptFormArgsList -> . empty
    (29) FormArgsList -> . FormArgsList COMMA ID
    (30) FormArgsList -> . ID
    (91) empty -> .

    ID              shift and go to state 23
    CLOSEPARENT     reduce using rule 91 (empty -> .)

    OptFormArgsList                shift and go to state 80
    FormArgsList                   shift and go to state 26
    empty                          shift and go to state 27

state 54

    (31) Block -> OPENBRACE CommandList CLOSEBRACE .

    CLASS           reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    DEF             reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    $end            reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    CLOSEBRACE      reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    IF              reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    WHILE           reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    DO              reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    FOR             reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    FOREACH         reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    BREAK           reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    CONTINUE        reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    RETURN          reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    OPENBRACE       reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    MINUSMINUS      reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    PLUSPLUS        reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    NOT             reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    TILDE           reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    NEW             reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    ID              reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    NUMBER          reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    STRING          reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    NIL             reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    SEMICOLON       reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)
    ELSE            reduce using rule 31 (Block -> OPENBRACE CommandList CLOSEBRACE .)


state 55

    (32) CommandList -> CommandList Command .
